--- a/.gitignore
+++ b/.gitignore
@@ -92,11 +92,11 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
+# Spyder project settings1
 .spyderproject
 .spyproject
 
-# Rope project settings
+# Rope project settings1
 .ropeproject
 
 # mkdocs documentation
@@ -106,3 +106,4 @@ venv.bak/
 .mypy_cache/
 
 /.idea/
+/twitter_scrapper/settings/dev.py
