[tweets-by-hashtag] Docker was fixed

--- a/.gitignore
+++ b/.gitignore
@@ -92,11 +92,11 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings1
+# Spyder project settings
 .spyderproject
 .spyproject
 
-# Rope project settings1
+# Rope project settings
 .ropeproject
 
 # mkdocs documentation
