[tweets-by-hashtag] Docker deploy was fixed

--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -21,6 +21,13 @@ http {
 
         proxy_set_header Host $host;
 
+        include /etc/nginx/mime.types;
+
+        location /static/ {
+            autoindex on;
+            alias /var/www/twitter_scrapper/static/;
+        }
+
         location / {
             uwsgi_pass django;
             include /opt/conf/uwsgi_params;
